--- a/TODO.txt
+++ b/TODO.txt
@@ -3,4 +3,5 @@ Decide on bot design
 Remove codenames_words.txt. Words should be in settings file in hello_mongo repo.
 
 Write frontend "decider"
-
+  - Consider returning top N words to user
+  - Add support for multiple base word inputs
