--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,4 @@ Consider pulling from another API. We're heavy on associations and not enough on
 Need to add neutral words
 Need to skip unknown words. Currently we bomb if no words found from API
 Finalize class structure
+Need to avoid words associated with other team and assassin. Check game.get_clues function for comment
