--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
 Probably should make all words lowercase
-Finalize class structure
+Finalize class structure. Do we need bot class? 
 Add tests
+Consider pulling from another API
